<resources>
    <string name="app_name">Aurora</string>
    <string name="retry">Retry</string>
    <string name="post_error">An error occurred while loading the posts</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="sign_in">SIGN IN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="view_all">View All</string>
    <string name="latest_activities">Latest activities</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="requirements">Requirements</string>
    <string name="enroll">Enroll</string>
    <string name="enrollment_confirmation">Enrollment Confirmation</string>
    <string name="location">Location</string>
    <string name="duration">Duration</string>
    <string name="enrolment_terms">By clicking enrolment, you agree with the terms and conditions, and make sure you will be on time.</string>
    <string name="confirm_enrolment">Confirm Enrolment</string>
    <string name="enrolment_complete">Enrolment Complete</string>
    <string name="enrolling">Enrolling&#8230;</string>
    <string name="activity_detail">Activity Detail</string>
    <string name="no_internet">No internet connections found. Check your connection or try again</string>
    <string name="whoops">Whoops!</string>
    <string name="enrolled_activity">Enrolled Activity</string>
    <string name="personal_information">Personal Information</string>
</resources>
