<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.czxbnb.aurora.ui.activityDetail.ActivityDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_scrolling"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height_image_view"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/image_scrolling_top"
                    mutableImage="@{viewModel.getActivity().image}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@string/activity_detail" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="Activity Title"
                    android:textSize="@dimen/text_size_title"
                    android:text="@{viewModel.getActivity().title}"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableLeftCompat="@drawable/ic_time"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:drawablePadding="@dimen/spacing_middle"
                    tools:text="2018-01-01 12:00"
                    android:text="@{viewModel.getActivity().time}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_small"
                    android:text="@string/description"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="@string/description"
                    android:text="@{viewModel.getActivity().content}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_small"
                    android:text="@string/location"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="@string/location"
                    android:text="@{`Address:` + viewModel.getActivity().address}" />

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_height="300dp"
                    tools:context=".ui.activityDetail.ActivityDetailActivity" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_small"
                    android:text="@string/requirements"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="@string/description"
                    android:text="@{viewModel.getActivity().requirements}" />

                <Button
                    android:id="@+id/btn_enroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_mlarge"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:minHeight="@dimen/btn_height"
                    android:text="@string/enroll"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_button"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>