<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.czxbnb.aurora.ui.login.LoginViewModel" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_5"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="@dimen/spacing_smlarge">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/blue_600"
                    android:textStyle="bold" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="4dp"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:background="@color/blue_600" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small"
                    android:visibility="visible"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_mlarge">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_xlarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textAlignment="center"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/blue_600"
                            android:textStyle="bold"
                            android:theme="@style/EditText.Grey" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_mlarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textAlignment="center"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/blue_600"
                            android:textStyle="bold"
                            android:theme="@style/EditText.Grey" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_middle" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_middle" />

                        <TextView
                            android:id="@+id/forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|end"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/forgot_password"
                            android:textAlignment="center"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/grey_20"
                            android:textStyle="bold"
                            tools:ignore="RtlHardcoded" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

            </LinearLayout>

        </RelativeLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/mrl_login"
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue_600">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="loginClick">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:mutableVisibility="@{viewModel.getLoadingVisibility()}" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white"
                    app:mutableVisibility="@{viewModel.getTextVisibility()}" />
            </FrameLayout>
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</layout>